  * [ssl/build] some minor fixes; fix compile without ssl, cleanup ssl config buffers
  * [proc,include_shell] log error if exec shell fails (fixes #2280)
  * [*cgi] Use physical base dir (alias, userdir) as DOCUMENT_ROOT in cgi environments (fixes #2216)
  * [doc] Move docs to outdated/ subdir and refer to wiki instead (fixes #2248)

- 1.4.28 - 2010-08-22
  * Rename fdevent_event_add to _set to reflect what the function does. Fix some handlers. (fixes #2249)
  * Fix buffer.h to include stdio.h as it is needer for SEGFAULT() (fixes #2250)

- 1.4.27 - 2010-08-13
  * Fix handling return value of SSL_CTX_set_options (fixes #2157, thx mlcreech)
  * Fix mod_proxy HUP handling (send final chunk, fix usage counter)
  * mod_proxy: close connection on write error (fixes #2114)
  * Check uri instead of physical path for directory redirect
  * Fix detecting git repository (fixes #2173, thx ncopa)
  * [mod_compress] Fix segfault when etags are disabled (fixes #2169)
  * Reset uri.authority before TLS servername handling, reset all "keep-alive" data in connection_del (fixes #2125)
  * Print double quotes properly when dumping config file (fixes #1806)
  * Include IP addresses on error log on password failures (fixes #2191)
  * Fix stalls while reading from ssl sockets (fixes #2197)
  * Fix etag formatting on boxes with 32-bit longs
  * Fix two compiler warnings
  * mod_accesslog: fix %p for ipv6 sockets (fixes #2228, thx jo.henke)
  * mod_fastcgi: Send 502 "Bad Gateway" if we couldn't open the file for X-Sendfile (fixes #2226)
  * mod_staticfile: add debug output if we ignore a file with static-file.exclude-extensions (fixes #2215)
  * mod_cgi: fix race condition leaving response not forwarded to client (fixes #2217)
  * mod_accesslog: Fix var declarations mixed in source (fixes #2233)
  * mod_status: Add version to status page (fixes #2219)
  * mod_accesslog: optimize accesslog_append_escaped (fixes #2236, thx crypt)